# colr

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
colr/: __init__.py  cli.py  config.py  exceptions.py  extractor.py
